--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,22 +20,35 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
     compile("com.crashlytics.sdk.android:crashlytics:$crashlyticsVersion@aar") {
         transitive = true
     }
 
-    compile "com.squareup.okhttp3:okhttp:$rootProject.ext.okHttpVersion"
-    compile "com.squareup.okhttp3:logging-interceptor:$rootProject.ext.okHttpVersion"
-    compile "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofitVersion"
-    compile "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofitVersion"
-    compile "com.squareup.retrofit2:adapter-rxjava2:$rootProject.ext.retrofitVersion"
-    compile "net.danlew:android.joda:$rootProject.ext.jodaTimeVersion"
-    compile "org.apache.commons:commons-lang3:3.4"
+    //API
+    implementation "com.squareup.okhttp3:okhttp:$rootProject.ext.okHttpVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.ext.okHttpVersion"
+    implementation "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$rootProject.ext.retrofitVersion"
+    implementation "net.danlew:android.joda:$rootProject.ext.jodaTimeVersion"
+    compile "io.reactivex.rxjava2:rxjava:$rootProject.ext.rxJavaVersion"
+    compile "io.reactivex.rxjava2:rxandroid:$rootProject.ext.rxAndroidVersion"
+
+    //ROOM
+    compile "android.arch.persistence.room:runtime:$rootProject.ext.roomVersion"
+    compile "android.arch.persistence.room:rxjava2:$rootProject.ext.roomVersion"
+    kapt "android.arch.persistence.room:compiler:$rootProject.ext.roomVersion"
+    compile "com.facebook.stetho:stetho:$rootProject.ext.slethoVersion"
+
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
