--- a/build.gradle
+++ b/build.gradle
@@ -27,11 +27,10 @@ task clean(type: Delete) {
 }
 
 ext {
-    coreVersion = '3.1.13'
     okHttpVersion = '3.8.1'
     retrofitVersion = '2.3.0'
-    jodaTimeVersion = '2.9.4'
-    roomVersion = '1.0.0-rc1'
+    jodaTimeVersion = '2.9.9'
+    roomVersion = '1.1.0-alpha2'
     slethoVersion = '1.5.0'
     safeRoomVersion = '0.1.0'
     rxJavaVersion = '2.1.2'
