--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.source.subscity"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -34,8 +34,8 @@ dependencies {
     }
 
     //ANDROID
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.0.0'
+    implementation 'com.android.support:recyclerview-v7:27.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     //RX
@@ -67,8 +67,10 @@ dependencies {
     kapt "com.arello-mobile:moxy-compiler:$moxyVersion"
 
     //GLIDE
-//    implementation "com.github.bumptech.glide:glide:$glideVersion"
-//    kapt "com.github.bumptech.glide:compiler:$glideVersion"
+    implementation("com.github.bumptech.glide:glide:$glideVersion") {
+        exclude group: "com.android.support"
+    }
+    kapt "com.github.bumptech.glide:compiler:$glideVersion"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
