--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity
             android:name=".ui.movie.MovieActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ui.cinema.CinemaActivity" />
     </application>
 
 </manifest>
