--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
             android:name=".ui.movie.MovieActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ui.cinema.CinemaActivity" />
+        <activity
+            android:name=".ui.city.CityActivity"
+            android:label="@string/city_title"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
