CinemaFragment uses Toolbar + update version

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity
             android:name=".ui.movie.MovieActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ui.cinema.CinemaActivity" />
+        <activity android:name=".ui.cinema.CinemaActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".ui.city.CityActivity"
             android:label="@string/city_title"
