--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     //ANDROID
     implementation 'com.android.support:appcompat-v7:27.0.0'
     implementation 'com.android.support:recyclerview-v7:27.0.0'
+    implementation 'com.android.support:customtabs:27.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     //RX
