--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         applicationId "com.source.subscity"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 4
+        versionCode 5
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -40,6 +40,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.0.0'
     implementation 'com.android.support:customtabs:27.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    //YOUTUBE
+    compile files('libs/YouTubeAndroidPlayerApi.jar')
 
     //RX
     implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
@@ -77,6 +80,7 @@ dependencies {
 
     //UI
     implementation "com.aurelhubert:ahbottomnavigation:$bottomNavifationVersion"
+    implementation "com.github.rubensousa:bottomsheetbuilder:$bottomSheetBuilderVersion"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
