--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,9 +12,10 @@ android {
         applicationId "com.source.subscity"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 6
+        versionCode 7
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -40,9 +41,13 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.0.0'
     implementation 'com.android.support:customtabs:27.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:multidex:1.0.3'
 
     //YOUTUBE
     compile files('libs/YouTubeAndroidPlayerApi.jar')
+
+    //PLAY SERVICES
+    implementation "com.google.android.gms:play-services-maps:11.8.0"
 
     //RX
     implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
