--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.0.0'
     implementation 'com.android.support:recyclerview-v7:27.0.0'
     implementation 'com.android.support:customtabs:27.0.0'
+    implementation 'com.android.support:transition:27.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:multidex:1.0.3'
 
