--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ task clean(type: Delete) {
 }
 
 ext {
+    supportVersion = '27.1.1'
+    playServicesVersion = '12.0.1'
     okHttpVersion = '3.8.1'
     retrofitVersion = '2.3.0'
     jodaTimeVersion = '2.9.9'
