--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ ext {
     okHttpVersion = '3.8.1'
     retrofitVersion = '2.3.0'
     jodaTimeVersion = '2.9.9'
-    roomVersion = '1.1.0-alpha2'
+    roomVersion = '1.1.0-beta1'
     slethoVersion = '1.5.0'
     safeRoomVersion = '0.1.0'
     rxJavaVersion = '2.1.2'
