--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         applicationId "com.markus.subscity"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 7
+        versionCode 9
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
@@ -90,6 +90,7 @@ dependencies {
     //UI
     implementation "com.aurelhubert:ahbottomnavigation:$bottomNavifationVersion"
     implementation "com.github.rubensousa:bottomsheetbuilder:$bottomSheetBuilderVersion"
+    implementation 'com.hannesdorfmann:adapterdelegates3:3.0.1'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
