--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$supportVersion"
     implementation "com.android.support:customtabs:$supportVersion"
     implementation "com.android.support:transition:$supportVersion"
-    implementation "com.android.support.constraint:constraint-layout:1.0.2"
+    implementation "com.android.support.constraint:constraint-layout:1.1.0"
     implementation "com.android.support:multidex:1.0.3"
 
     //YOUTUBE
@@ -52,6 +52,9 @@ dependencies {
     //PLAY SERVICES
     implementation "com.google.android.gms:play-services-maps:$playServicesVersion"
     implementation "com.google.firebase:firebase-core:$playServicesVersion"
+
+    //BILLING
+    implementation 'com.anjlab.android.iab.v3:library:1.0.44'
 
     //RX
     implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
