--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.markus.subscity"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 11
-        versionName "1.0.1-billing"
+        versionCode 12
+        versionName "1.1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
