Migrate to Android X

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,7 +102,7 @@
             android:theme="@style/AppTheme.Activity" />
 
         <provider
-            android:name="android.support.v4.content.FileProvider"
+            android:name="androidx.core.content.FileProvider"
             android:authorities="@string/file_export_provider"
             android:exported="false"
             android:grantUriPermissions="true">
