--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,10 +83,10 @@ dependencies {
     kapt 'tech.schoolhelper:moxy-x-compiler:1.7.0'
 
     //GLIDE
-//    implementation("com.github.bumptech.glide:glide:$glideVersion") {
-//        exclude group: "com.android.support"
-//    }
-//    kapt "com.github.bumptech.glide:compiler:$glideVersion"
+    implementation("com.github.bumptech.glide:glide:$glideVersion") {
+        exclude group: "com.android.support"
+    }
+    kapt "com.github.bumptech.glide:compiler:$glideVersion"
 
     //UI
     implementation "com.aurelhubert:ahbottomnavigation:$bottomNavifationVersion"
