--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,13 +36,13 @@ dependencies {
     }
 
     //ANDROID
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    implementation 'com.google.android.material:material:1.1.0-alpha07'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha05'
     implementation 'androidx.browser:browser:1.0.0'
-    implementation 'androidx.transition:transition:1.0.0'
+    implementation 'androidx.transition:transition:1.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.multidex:multidex:2.0.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
 
     //YOUTUBE
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
