--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,9 @@ dependencies {
     }
 
     //ANDROID
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
     implementation 'com.google.android.material:material:1.1.0-alpha07'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha05'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha06'
     implementation 'androidx.browser:browser:1.0.0'
     implementation 'androidx.transition:transition:1.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -48,8 +48,8 @@ dependencies {
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
 
     //PLAY SERVICES
-    implementation "com.google.android.gms:play-services-maps:$playServicesVersion"
-    implementation "com.google.firebase:firebase-core:$playServicesVersion"
+    implementation "com.google.android.gms:play-services-maps:$playServicesMaps"
+    implementation "com.google.firebase:firebase-core:$playServicesFirebase"
 
     //BILLING
     implementation 'com.anjlab.android.iab.v3:library:1.0.44'
