--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
+    buildToolsVersion = '28.0.3'
 }
 
 dependencies {
@@ -36,11 +37,11 @@ dependencies {
     }
 
     //ANDROID
-    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
-    implementation 'com.google.android.material:material:1.1.0-alpha07'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha06'
+    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
     implementation 'androidx.browser:browser:1.0.0'
-    implementation 'androidx.transition:transition:1.0.1'
+    implementation 'androidx.transition:transition:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.multidex:multidex:2.0.1'
 
@@ -68,9 +69,9 @@ dependencies {
     implementation "net.danlew:android.joda:$jodaTimeVersion"
 
     //ROOM
-    implementation 'androidx.room:room-runtime:2.0.0'
-    implementation 'androidx.room:room-rxjava2:2.0.0'
-    kapt 'androidx.room:room-compiler:2.0.0'
+    implementation 'androidx.room:room-runtime:2.1.0'
+    implementation 'androidx.room:room-rxjava2:2.1.0'
+    kapt 'androidx.room:room-compiler:2.1.0'
     implementation "com.facebook.stetho:stetho:$slethoVersion"
 
     //DAGGER
