--- a/build.gradle
+++ b/build.gradle
@@ -31,22 +31,30 @@ task clean(type: Delete) {
 }
 
 ext {
-    supportVersion = '27.1.1'
+    appcompatVersion = '1.0.2'
+    materialVersion = '1.1.0-alpha09'
+    recyclerViewVersion = '1.1.0-beta03'
+    browserVersion = '1.0.0'
+    transitionVersion = '1.1.0'
+    constraintLayoutVersion = '1.1.3'
+    multidexVersion = '2.0.1'
+    billingVersion = '1.0.44'
     playServicesMaps = '16.1.0'
     playServicesFirebase = '16.0.9'
     okHttpVersion = '3.8.1'
     retrofitVersion = '2.3.0'
     jodaTimeVersion = '2.9.9.3'
-    roomVersion = '1.1.0-beta1'
+    roomVersion = '2.1.0'
     slethoVersion = '1.5.0'
-    safeRoomVersion = '0.1.0'
     rxJavaVersion = '2.1.2'
     rxAndroidVersion = '2.1.1'
     rxKotlin = '2.1.0'
     daggerVersion = '2.14.1'
     crashlyticsVersion = '2.8.0'
     bottomSheetBuilderVersion = '1.6.0'
-    moxyVersion = '1.5.5'
+    moxyVersion = '1.7.0'
     glideVersion = '4.9.0'
     bottomNavifationVersion = '2.3.4'
+    adapterDelegatesVersion='3.0.1'
+    slidableActivityVersion ='2.0.6'
 }
