--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,7 +99,13 @@ dependencies {
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
+    //Tests
     testImplementation "junit:junit:4.12"
+    testImplementation "org.mockito:mockito-core:3.0.0"
+    testImplementation "org.mockito:mockito-inline:3.0.0"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
+
+    //Android Tests
     androidTestImplementation "androidx.test.ext:junit:1.1.1"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
 }
