--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,11 @@ dependencies {
     //Android Tests
     androidTestImplementation "androidx.test.ext:junit:1.1.1"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
+
+    implementation "androidx.activity:activity-ktx:1.1.0"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:2.2.0"
+
 }
 
 kapt {
