--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -42,9 +43,9 @@ ext {
     playServicesMaps = '16.1.0'
     playServicesFirebase = '16.0.9'
     okHttpVersion = '3.8.1'
-    retrofitVersion = '2.3.0'
+    retrofitVersion = '2.7.1'
     jodaTimeVersion = '2.10.2'
-    roomVersion = '2.1.0'
+    roomVersion = '2.2.3'
     slethoVersion = '1.5.0'
     rxJavaVersion = '2.1.2'
     rxAndroidVersion = '2.1.1'
